--- a/package.json
+++ b/package.json
@@ -1,18 +1,8 @@
 {
-  "name": "ai_inbound_api",
+  "name": "zoho-api-vercel",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
   "dependencies": {
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10"
+    "axios": "^1.6.0"
   }
 }
